feat: Upgrade base and 3rd party versions to avoid vulnerabilities

--- a/docker-zookeeper/docker/Dockerfile
+++ b/docker-zookeeper/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM --platform=$BUILDPLATFORM golang:1.22.4-alpine3.20 as builder
+FROM --platform=$BUILDPLATFORM golang:1.24.4-alpine3.22 as builder
 ARG BUILDPLATFORM
 ARG TARGETOS
 ARG TARGETARCH
@@ -19,7 +19,7 @@ COPY main.go main.go
 # Build
 RUN CGO_ENABLED=0 GOOS=${TARGETOS} GOARCH=${TARGETARCH} GO111MODULE=on go build -a -o zookeeper-assistant main.go
 
-FROM eclipse-temurin:22.0.1_8-jdk-alpine
+FROM eclipse-temurin:21.0.7_6-jdk-alpine-3.21
 
 ENV ZOOKEEPER_HOME=/opt/zookeeper \
     ZOOKEEPER_OPT=/var/opt/zookeeper \
@@ -84,7 +84,7 @@ RUN set -x \
     && mkdir -p ${ZOOKEEPER_OPT} \
     && mkdir -p ${ZOOKEEPER_DATA}
 
-ARG JOLOKIA_VERSION="1.7.1"
+ARG JOLOKIA_VERSION="1.7.2"
 # Download Jolokia
 RUN set -x \
     && wget \
